---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
  SELECT p.id, p.resource ->> 'name' AS patient_name, count(o.id) AS observation_count
    FROM patient p
         LEFT JOIN observation o
         ON p.id = (o.resource ->> 'subject')
   WHERE p.resource @> '{"active": true}' AND (o.resource ->> 'status') = 'final'
GROUP BY p.id, p.resource ->> 'name'
  HAVING count(o.id) > 5
ORDER BY observation_count DESC
   LIMIT 100
